--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "openzeppelin-solidity-2.3.0": "npm:openzeppelin-solidity@2.3.0",
     "pretty-error": "^2.1.1",
     "solidity-parser-antlr": "^0.4.11",
+    "synthetix": "^2.45.2",
     "synthetix-2.43.1": "npm:synthetix@2.43.1",
     "web3-utils": "1.2.2"
   }
