--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,17 @@ orbs: # declare what orbs we are going to use
 
 version: 2.1 # using 2.1 provides access to orbs and other features
 
+jobs:
+  test:
+    steps:
+      - checkout
+      - run: npx hardhat compile --showsize --optimizer
+
 workflows:
   matrix-tests:
     jobs:
       - node/test:
           version: 13.11.0
-      - dotests:
-          steps:
-            # Checkout the code from the branch into the working_directory
-            - checkout
-            # Log the current branch
-            - run: npx hardhat compile --showsize --optimizer
+  build_and_test:
+    jobs:
+      - test
