--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "yaml-validator": "^3.0.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.2.0",
     "@chainlink/contracts-0.0.10": "npm:@chainlink/contracts@0.0.10",
     "@eth-optimism/contracts": "0.2.8",
     "@eth-optimism/watcher": "0.0.1-alpha.8",
