--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "big.js": "^6.1.1",
     "commander": "5.1.0",
     "crypto": "^1.0.1",
+    "keccak256": "^1.0.3",
+    "merkletreejs": "^0.2.23",
     "openzeppelin-solidity-2.3.0": "npm:openzeppelin-solidity@2.3.0",
     "pretty-error": "^2.1.1",
     "solidity-parser-antlr": "^0.4.11",
