--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "commander": "5.1.0",
     "crypto": "^1.0.1",
     "openzeppelin-solidity-2.3.0": "npm:openzeppelin-solidity@2.3.0",
+    "keccak256": "^1.0.3",
+    "merkletreejs": "^0.2.23",
     "pretty-error": "^2.1.1",
     "solidity-parser-antlr": "^0.4.11",
     "solidity-util": "github:willitscale/solidity-util",
