--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"big.js": "^6.1.1",
 		"commander": "5.1.0",
 		"crypto": "^1.0.1",
+		"hardhat-abi-exporter": "^2.2.1",
 		"keccak256": "^1.0.3",
 		"merkletreejs": "^0.2.23",
 		"openzeppelin-solidity-2.3.0": "npm:openzeppelin-solidity@2.3.0",
