- l2 deployment OK - l2 deploy PriceFeed included - l2 verification error

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"@eth-optimism/plugins": "0.0.16",
 		"@eth-optimism/smock": "0.2.1-alpha.0",
 		"@eth-optimism/solc": "0.5.16-alpha.7",
-		"@nomiclabs/hardhat-etherscan": "^2.1.2",
+		"@nomiclabs/hardhat-ethers": "^2.0.2",
+		"@nomiclabs/hardhat-etherscan": "^2.1.3",
 		"@nomiclabs/hardhat-truffle5": "2.0.0",
 		"@nomiclabs/hardhat-web3": "2.0.0",
 		"@pinata/sdk": "1.1.11",
@@ -39,10 +40,11 @@
 		"eslint-plugin-prettier": "^2.6.2",
 		"eslint-plugin-promise": "^4.0.1",
 		"eslint-plugin-standard": "^4.0.0",
-		"ethers": "5.0.31",
+		"ethereum-waffle": "^3.4.0",
+		"ethers": "^5.4.0",
 		"execa": "^4.1.0",
 		"fs-extra": "9.0.1",
-		"hardhat": "~2.1.2",
+		"hardhat": "^2.4.1",
 		"hardhat-gas-reporter": "~1.0.4",
 		"husky": "^4.3.0",
 		"is-ci": "^2.0.0",
@@ -70,7 +72,9 @@
 	"dependencies": {
 		"@chainlink/contracts": "^0.2.0",
 		"@chainlink/contracts-0.0.10": "npm:@chainlink/contracts@0.0.10",
-		"@eth-optimism/contracts": "0.2.8",
+		"@eth-optimism/contracts": "^0.4.13",
+		"@eth-optimism/hardhat-ovm": "^0.2.2",
+		"@eth-optimism/plugins": "*",
 		"@eth-optimism/watcher": "0.0.1-alpha.8",
 		"@openzeppelin/test-helpers": "^0.5.11",
 		"abi-decoder": "2.3.0",
@@ -86,7 +90,7 @@
 		"solidity-parser-antlr": "^0.4.11",
 		"solidity-util": "github:willitscale/solidity-util",
 		"synthetix": "^2.45.2",
-		"synthetix-2.43.1": "npm:synthetix@2.43.1",
+		"synthetix-2.50.4-ovm": "npm:synthetix@2.50.4-ovm",
 		"synthetix-data": "^2.1.43",
 		"web3-utils": "1.2.2"
 	}
