--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@nomiclabs/hardhat-etherscan": "^2.1.2",
 		"@nomiclabs/hardhat-truffle5": "2.0.0",
 		"@nomiclabs/hardhat-web3": "2.0.0",
+		"@openzeppelin/hardhat-upgrades": "^1.12.0",
 		"@pinata/sdk": "1.1.11",
 		"@uniswap/token-lists": "^1.0.0-beta.11",
 		"ajv": "^6.12.4",
