--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"@chainlink/contracts": "^0.2.0",
 		"@chainlink/contracts-0.0.10": "npm:@chainlink/contracts@0.0.10",
 		"@eth-optimism/contracts": "^0.4.14",
+		"@eth-optimism/message-relayer": "^0.2.4",
 		"@eth-optimism/watcher": "0.0.1-alpha.8",
 		"@openzeppelin/test-helpers": "^0.5.11",
 		"abi-decoder": "2.3.0",
