--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
 		"@eth-optimism/contracts": "^0.4.14",
 		"@eth-optimism/message-relayer": "^0.2.4",
 		"@eth-optimism/watcher": "0.0.1-alpha.8",
+		"@openzeppelin/contracts-4.4.1": "npm:@openzeppelin/contracts@^4.4.1",
+		"@openzeppelin/contracts-upgradeable": "^4.4.1",
 		"@openzeppelin/test-helpers": "^0.5.11",
 		"abi-decoder": "2.3.0",
 		"big.js": "^6.1.1",
