--- a/scripts/abi/SNXRewards.json
+++ b/scripts/abi/SNXRewards.json
@@ -14,7 +14,7 @@
         "type": "address"
       }
     ],
-    "name": "accountDebtRatio",
+    "name": "c_ratio",
     "outputs": [
       {
         "internalType": "uint256",
@@ -31,16 +31,63 @@
     "inputs": [
       {
         "internalType": "address",
-        "name": "account",
+        "name": "_account",
+        "type": "address"
+      }
+    ],
+    "name": "collateralisationRatioAndAnyRatesInvalid",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      },
+      {
+        "internalType": "bool",
+        "name": "",
+        "type": "bool"
+      }
+    ],
+    "payable": false,
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "constant": true,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "",
+        "type": "address"
+      }
+    ],
+    "name": "debtBalance",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "payable": false,
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "constant": true,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "_issuer",
         "type": "address"
       },
       {
-        "internalType": "uint256",
-        "name": "period",
-        "type": "uint256"
+        "internalType": "bytes32",
+        "name": "currencyKey",
+        "type": "bytes32"
       }
     ],
-    "name": "effectiveDebtRatioForPeriod",
+    "name": "debtBalanceOf",
     "outputs": [
       {
         "internalType": "uint256",
@@ -54,19 +101,13 @@
   },
   {
     "constant": true,
-    "inputs": [
-      {
-        "internalType": "address",
-        "name": "",
-        "type": "address"
-      }
-    ],
-    "name": "feesClaimable",
+    "inputs": [],
+    "name": "issuanceGeneralRatio",
     "outputs": [
       {
-        "internalType": "bool",
+        "internalType": "uint256",
         "name": "",
-        "type": "bool"
+        "type": "uint256"
       }
     ],
     "payable": false,
@@ -75,19 +116,13 @@
   },
   {
     "constant": true,
-    "inputs": [
-      {
-        "internalType": "address",
-        "name": "account",
-        "type": "address"
-      }
-    ],
-    "name": "isFeesClaimable",
+    "inputs": [],
+    "name": "issuanceRatio",
     "outputs": [
       {
-        "internalType": "bool",
+        "internalType": "uint256",
         "name": "",
-        "type": "bool"
+        "type": "uint256"
       }
     ],
     "payable": false,
@@ -104,11 +139,11 @@
       },
       {
         "internalType": "uint256",
-        "name": "debtRatio",
+        "name": "_c_ratio",
         "type": "uint256"
       }
     ],
-    "name": "setAccountDebtRatio",
+    "name": "setCRatio",
     "outputs": [],
     "payable": false,
     "stateMutability": "nonpayable",
@@ -123,12 +158,27 @@
         "type": "address"
       },
       {
-        "internalType": "bool",
-        "name": "claimable",
-        "type": "bool"
+        "internalType": "uint256",
+        "name": "_debtBalance",
+        "type": "uint256"
       }
     ],
-    "name": "setFeesClaimable",
+    "name": "setDebtBalance",
+    "outputs": [],
+    "payable": false,
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "constant": false,
+    "inputs": [
+      {
+        "internalType": "uint256",
+        "name": "_issuanceRation",
+        "type": "uint256"
+      }
+    ],
+    "name": "setIssuanceRatio",
     "outputs": [],
     "payable": false,
     "stateMutability": "nonpayable",
