--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"yaml-validator": "^3.0.0"
 	},
 	"dependencies": {
+		"@anders-t/ethers-ledger": "^1.0.4",
 		"@chainlink/contracts": "^0.2.0",
 		"@chainlink/contracts-0.0.10": "npm:@chainlink/contracts@0.0.10",
 		"@eth-optimism/contracts": "^0.4.14",
