--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"@eth-optimism/contracts": "^0.4.14",
 		"@eth-optimism/message-relayer": "^0.2.4",
 		"@eth-optimism/watcher": "0.0.1-alpha.8",
+		"@ethersproject/hardware-wallets": "^5.5.0",
 		"@openzeppelin/contracts-4.4.1": "npm:@openzeppelin/contracts@^4.4.1",
 		"@openzeppelin/contracts-upgradeable": "^4.4.1",
 		"@openzeppelin/test-helpers": "^0.5.11",
