--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"ethereumjs-abi": "^0.6.8",
 		"graphql-request": "^3.5.0",
 		"hardhat-abi-exporter": "^2.2.1",
+		"hardhat-contract-sizer": "^2.5.1",
 		"keccak256": "^1.0.3",
 		"merkletreejs": "^0.2.23",
 		"objects-to-csv": "^1.3.6",
