--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"bn.js": "4.11.8",
 		"chai": "4.2.0",
 		"chalk": "^2.4.2",
+		"codecov": "^3.8.3",
 		"concurrently": "5.2.0",
 		"dotenv": "^6.1.0",
 		"eslint": "7.6.0",
