--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"hardhat-gas-reporter": "~1.0.4",
 		"husky": "^8.0.0",
 		"is-ci": "^2.0.0",
+		"lint-staged": "^13.0.0",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.uniq": "^4.5.0",
 		"mocha": "8.1.3",
@@ -110,5 +111,8 @@
 		"synthetix-2.50.4-ovm": "npm:synthetix@2.50.4-ovm",
 		"synthetix-data": "^2.1.43",
 		"web3-utils": "1.2.2"
+	},
+	"lint-staged": {
+		"*.js": "eslint --cache --fix"
 	}
 }
