--- a/codecov.yml
+++ b/codecov.yml
@@ -6,3 +6,7 @@ coverage:
   precision: 2
   round: down
   range: "50...100"
+  status:
+    project:
+      default:
+        target: 50% #overall project/ repo coverage
