--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,5 @@
 orbs: # declare what orbs we are going to use
-  node: circleci/node@3.0.1 # the node orb provides common node-related configuration
+  node: circleci/node@5.0.2 # the node orb provides common node-related configuration
   codecov: codecov/codecov@3.2.3
 
 version: 2.1 # using 2.1 provides access to orbs and other features
@@ -43,8 +43,8 @@ jobs:
           at: /tmp/coverage
       - checkout
       - codecov/upload:
-          file: '/tmp/coverage/coverage.json'
-          
+          file: "/tmp/coverage/coverage.json"
+
 workflows:
   jobs-workflow:
     jobs:
