--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ version: 2.1 # using 2.1 provides access to orbs and other features
 
 jobs:
   build-and-test:
+    parallelism: 8
     executor: node/default
     steps:
       - checkout
@@ -17,9 +18,15 @@ jobs:
           command: |
             npx hardhat compile --showsize --optimizer
       - run:
-          name: Tests
+          name: Test and output gas used
           command: |
-            npx hardhat test --optimizer
+            set +e
+            circleci tests glob 'test/contracts/*/*.js' |
+            circleci tests split |
+            xargs npm test -- --gas
+            EXIT_CODE=$?
+            printf "\\n"
+            exit $EXIT_CODE
       - run:
           name: Create shared coverage outputs folder
           command: mkdir -p /tmp/coverage
