refactor ranged amm to fit contract size limit

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,8 +5,8 @@ coverage
 .circleci/config.template.yml
 .circleci/config.yml
 codecov.yml
-.openzeppelin\unknown-10.json
-scripts\abi\*
+.openzeppelin/*
+scripts/abi/*
 hints.txt
 
 # husky hooks
