--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 		"test": "node --max-old-space-size=4096 ./node_modules/.bin/hardhat test"
 	},
 	"devDependencies": {
-		"@codechecks/client": "0.1.10",
 		"@eth-optimism/plugins": "0.0.16",
 		"@eth-optimism/smock": "0.2.1-alpha.0",
 		"@eth-optimism/solc": "0.5.16-alpha.7",
@@ -30,15 +29,11 @@
 		"@nomiclabs/hardhat-truffle5": "2.0.0",
 		"@nomiclabs/hardhat-web3": "2.0.0",
 		"@openzeppelin/hardhat-upgrades": "^1.12.0",
-		"@pinata/sdk": "1.1.11",
 		"@uniswap/token-lists": "^1.0.0-beta.11",
-		"ajv": "^6.12.4",
-		"axios": "0.21.2",
 		"bn.js": "4.11.8",
 		"chai": "4.2.0",
 		"chalk": "^2.4.2",
 		"codecov": "^3.8.3",
-		"concurrently": "5.2.0",
 		"dotenv": "^6.1.0",
 		"eslint": "7.6.0",
 		"eslint-config-prettier": "^3.6.0",
@@ -51,35 +46,22 @@
 		"eslint-plugin-promise": "^4.0.1",
 		"eslint-plugin-standard": "^4.0.0",
 		"ethers": "^5.5.1",
-		"execa": "^4.1.0",
-		"fs-extra": "9.0.1",
 		"hardhat": "~2.1.2",
 		"hardhat-gas-reporter": "~1.0.4",
 		"husky": "^8.0.0",
-		"is-ci": "^2.0.0",
-		"lodash.clonedeep": "^4.5.0",
-		"lodash.uniq": "^4.5.0",
-		"mocha": "8.1.3",
-		"mustache": "^4.0.1",
-		"p-limit": "1.3.0",
 		"prettier": "~1.19.1",
 		"prettier-plugin-solidity": "1.0.0-beta.6",
 		"pretty-quick": "~2.0.2",
-		"rlp": "^2.2.6",
-		"semver": "7.3.2",
 		"solc": "0.5.16",
 		"solhint": "~3.3.4",
 		"solidifier": "git@github.com:synthetixio/solidifier#2.2.2",
 		"solidity-coverage": "^0.7.19",
 		"table": "^5.0.2",
-		"wait-port": "^0.2.2",
 		"web3": "1.3.3",
 		"webpack": "4.44.0",
-		"webpack-cli": "3.3.12",
-		"yaml-validator": "^3.0.0"
+		"webpack-cli": "3.3.12"
 	},
 	"dependencies": {
-		"@anders-t/ethers-ledger": "^1.0.4",
 		"@chainlink/contracts": "^0.4.0",
 		"@chainlink/contracts-0.0.10": "npm:@chainlink/contracts@0.0.10",
 		"@eth-optimism/contracts": "^0.4.14",
@@ -94,8 +76,6 @@
 		"abi-decoder": "2.3.0",
 		"base64-sol": "1.1.0",
 		"big.js": "^6.1.1",
-		"commander": "5.1.0",
-		"crypto": "^1.0.1",
 		"ethereumjs-abi": "^0.6.8",
 		"graphql-request": "^3.5.0",
 		"hardhat-abi-exporter": "^2.2.1",
@@ -104,10 +84,6 @@
 		"merkletreejs": "^0.2.23",
 		"objects-to-csv": "^1.3.6",
 		"openzeppelin-solidity-2.3.0": "npm:openzeppelin-solidity@2.3.0",
-		"prb-math": "^2.4.1",
-		"pretty-error": "^2.1.1",
-		"solidity-parser-antlr": "^0.4.11",
-		"solidity-util": "github:willitscale/solidity-util",
 		"synthetix-2.50.4-ovm": "npm:synthetix@2.50.4-ovm",
 		"synthetix-data": "^2.1.43",
 		"web3-utils": "1.2.2"
