--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,10 @@ workflows:
             branches:
               only:
                 - main
+                - curve-onramp
       - build-and-test:
           filters:
             branches:
               only:
                 - main
+                - curve-onramp
